# avena-ng

./: .dockerignore  .gitignore  Cargo.toml
.github/workflows/: publish-container.yml  release-binaries.yml
avena-overlay/: Cargo.toml  README.md  acme-getting-started.md  getting-started.md
avena-overlay/container/: Containerfile  README.md
avena-overlay/container/quadlet/: avena-nats.container.example  avena-overlay.container
avena-overlay/examples/: mixed-ip-acme.toml
avena-overlay/src/: address.rs  lib.rs
avena-overlay/src/acme/: frame.rs  mod.rs  process.rs  proxy.rs
avena-overlay/src/crypto/: certs.rs  handshake.rs  mod.rs
avena-overlay/src/daemon/: config.rs  mod.rs  peer_state.rs
avena-overlay/src/discovery/: mdns.rs  mod.rs  static_peers.rs
avena-overlay/src/identity/: device_id.rs  keypair.rs  mod.rs
avena-overlay/src/routing/: babeld.rs  error.rs  mod.rs
avena-overlay/src/tunnel/: backend.rs  convert.rs  kernel.rs  userspace.rs
avena-overlay/src/wg/: error.rs  uapi.rs
avena-overlay/src/wg/linux/: netlink.rs
avena-overlay/src/wg/userspace/: mod.rs  socket.rs
avena-overlay/sudoers.d/: avena-test
avena-overlay/tests/: discovery_integration.rs  handshake_race.rs  wireguard_interface.rs
avena-overlay/tests/scripts/: two_node_test.sh
avena-testbed/: Cargo.toml
avena-testbed/scenarios/: dual_underlay_churn_cleanup.toml  dual_underlay_failover.toml  dual_underlay_same_peer.toml  dual_underlay_same_peer_ns3.toml  linear_three_hop.toml  linear_three_hop_ns3.toml  mobile_relay.toml  star_gateway.toml  two_node_basic.toml  two_node_basic_ns3.toml
avena-testbed/src/: events.rs  lib.rs  links.rs  metrics.rs  ns3_driver.rs  ns3_plumbing.rs  pki.rs  runner.rs  scenario.rs  status.rs  telemetry.rs  telemetry_bus.rs  topology.rs
avena-ui/: README.md  package-lock.json  package.json
docs/: design.tex  main.tex  references.bib
docs/chapters/: 01-introduction.tex  02-overlay.tex  03-messaging.tex  04-formal-model.tex  05-interests.tex  06-fleet.tex  07-implementation.tex  08-status.tex
ns3-driver/: README.md  avena-ns3-driver.cc  avena-ns3-driver.sh
plans/: README.md  layer1-active-roadmap.md  tech-debt.md
plans/archive/: README.md  avena-testbed-implementation-plan.md  babeld-integration.md  layer1-implementation-plan.md  layer1-remaining-work.md
src/: address.rs  lib.rs
src/crypto/: certs.rs  handshake.rs  mod.rs
src/daemon/: config.rs  mod.rs  peer_state.rs
src/discovery/: mdns.rs  mod.rs  static_peers.rs
src/identity/: derived.rs  device_id.rs  keypair.rs  mod.rs
src/tunnel/: backend.rs  kernel.rs  mod.rs  userspace.rs
src/wg/: error.rs  mod.rs  (+2 more)
tests/: wireguard_interface.rs
(+9 files in other folders)
